# punkypan

./: .gitignore  CMakeLists.txt  Main.qml  MainWindow.cpp  MainWindow.h  MainWindow.ui  Main_desktop.qml  Main_mobile.qml  README.md  logic.cpp  logic.h  main.cpp  resources.qrc
